<resources>
    <string name="app_name">Pontes GameZone</string>
    <string name="welcome_message">Welcome to Pontes GameZone!</string>
    <string name="registered_message">Registered to %1$s</string>
    <string name="nickname">Your nickname is %1$s</string>
    <string name="nickname_visitor">Visitor</string>
    <string name="no_nickname">Tap to add your nickname…</string>
    <string name="visitor">Visitor</string>
    <string name="company_name">Pontes Apps by Manu</string>
    <string name="company_web_address">www.android.pontes.ro</string>
    <string name="choose_a_game">Choose a game:</string>
    <string name="black_jack_game">Black Jack</string>
    <string name="poker_game">Poker</string>
    <string name="cards_war_game">Cards War</string>
    <string name="who_is_greater_game">Who is Greater</string>
    <string name="mnu_change_nickname">Change Nickname</string>
    <string name="change_nickname_title">Nickname</string>
    <string name="change_nickname_message">Set your new nickname: </string>
    <string name="change_nickname_hint">Write here your nickname…</string>
    <string name="change_nickname_success">Hello %1$s!\nYour nickname was changed successfully.</string>
    <string name="change_nickname_error_short">The nickname must contain at least two letters.\nTry again!</string>
    <string name="change_nickname_error_non_alphanumeric">The nickname must contain only letters and digits.\nIt must be one word.\nTry again!</string>
    <string name="title_activity_black_jack">Pontes Black Jack</string>
    <string name="bj_new">New hand</string>
    <string name="bj_bet">Change bet</string>
    <string name="bj_hit">Hit</string>
    <string name="bj_stand">Stand</string>
    <string name="bj_double">Double</string>
    <string name="bj_surrender">Surrender</string>
    <string name="my_money">My wallet: $%1$s</string>
    <string name="my_bet">My bet: $%1$s</string>
    <string name="my_bj_total">You: %1$s</string>
    <string name="dealers_bj_total">Dealer: %1$s</string>
    <string name="bj_status">Blackjack status</string>
    <string name="not_enough_money_to_double">You haven\'t enough money to double your bet.\nYou have $%1$s in your wallet.</string>
    <string name="statistics_for_blackjack">You played %1$s hands since last pause.\nYou won $%2$s and you lost $%3$s.\nYour current balance for this session is $%4$s.\nThe average balance per hand is $%5$s.</string>
    <string name="title_activity_poker">Pontes Five Card Draw Poker</string>
    <string name="pk_new">New hand</string>
    <string name="pk_bet">Change bet</string>
    <string name="pk_discard">Draw</string>
    <string name="pk_discard_x">Draw %1$s</string>
    <string name="pk_stand">Showdown</string>
    <string name="pk_fold">Fold</string>
    <string name="pk_raise">Raise</string>
    <string name="pk_sort_title">Sort the cards</string>
    <string name="pk_sort_by_value">By value</string>
    <string name="pk_sort_by_color">By colour</string>
    <string name="pk_sort_by_nothing">Shuffled</string>
    <string name="my_pk_hand">You: %1$s</string>
    <string name="dealers_pk_hand">Dealer: %1$s</string>
    <string name="pk_nothing">nothing</string>
    <string name="pk_status">Poker status</string>
    <string name="pk_sort_not_allowed">You can not sort the cards when you have to discard some of them.</string>
    <string name="statistics_for_poker">You played %1$s hands since last pause.\nYou won $%2$s and you lost $%3$s.\nYour current balance for this session is $%4$s.\nThe average balance per hand is $%5$s.</string>
    <string-array name="pk_hands_array">
        <item>Straight flush</item>
        <item>Four of a kind</item>
        <item>Full house</item>
        <item>Flush</item>
        <item>Straight</item>
        <item>Three of a kind</item>
        <item>Two pair</item>
        <item>One pair</item>
        <item>No-pair</item>
        <item>Nothing</item>
    </string-array>
    <string name="title_activity_cards_war">Pontes Cards War</string>
    <string name="cw_new">New war</string>
    <string name="cw_bet">Change bet</string>
    <string name="cw_fire">Fire</string>
    <string name="cw_withdraw">Withdraw</string>
    <string name="my_cw_total">You: %1$s</string>
    <string name="dealers_cw_total">Dealer: %1$s</string>
    <string name="cbt_war_sounds">War sounds</string>
    <string name="cw_status">Cards War status</string>
    <string name="statistics_for_cards_war">You fought in %1$s Wars since last pause.\nYou won $%2$s and you lost $%3$s.\nYour current balance for this session is $%4$s.\nThe average balance per war is $%5$s.</string>
    <string name="title_activity_who_is_greater">Pontes Who is Greater</string>
    <string name="gw_new">New set</string>
    <string name="gw_bet">Change bet</string>
    <string name="gw_throw">Throw dice</string>
    <string name="gw_abandon">Abandon</string>
    <string name="my_gw_total">You: %1$s</string>
    <string name="dealers_gw_total">Dealer: %1$s</string>
    <string name="gw_status">Who is Greater status</string>
    <string name="statistics_for_who_is_greater">You played %1$s sets since last pause.\nYou won $%2$s and you lost $%3$s.\nYour current balance for this session is $%4$s.\nThe average balance per set is $%5$s.</string>
    <string-array name="suits_array">
        <item>card</item>
        <item>Clubs</item>
        <item>Diamonds</item>
        <item>Hearts</item>
        <item>Spades</item>
    </string-array>
    <string-array name="values_array">
        <item>Reverse</item>
        <item>Ace</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Jack</item>
        <item>Queen</item>
        <item>King</item>
    </string-array>
    <string name="card_name">%1$s of %2$s</string>
    <string name="card_name_extended">%1$s\'s %2$s</string>
    <string-array name="possesion_array">
        <item>Dealer</item>
        <item>Your</item>
    </string-array>
    <string name="die_name_extended">%1$s %2$s</string>
    <string name="bet_dialog_title">Your new bet!</string>
    <string name="bet_dialog_body">Hey %1$s,\nwrite your bet in dollars: </string>
    <string name="not_enough_money_to_bet">Sorry %1$s!\nYou haven\'t enough money to bet $%2$s.\nYou must change your bet!\nYou have $%3$s in your wallet.</string>
    <string name="play_just_for_fun">Oh %1$s, it\'s an unpleasant situation!\nYou haven\'t money in your wallet.\nYou can change your bet to $0 to play just for fun.</string>
    <string name="money_won_as_bonus_title">Bonus Earnings</string>
    <string name="money_won_as_bonus_message">Hey %1$s,\nYou won $%2$s as bonus since last launch of the game.\nYou won $%3$s as bonus today.\nYou won $%4$s as bonus since you are our client.</string>
    <string name="mnu_money_won_as_bonus">Bonus Earnings Statistics</string>
    <string name="warning_not_available">Action not available</string>
    <string name="ellypsis">…</string>
    <string name="title_activity_audio_settings">Audio</string>
    <string name="cbt_sounds_setting">Play sounds</string>
    <string name="cbt_dice_sound_setting">Announce dice vocally</string>
    <string name="cbt_speech_setting">Use speech to improve accessibility</string>
    <string name="title_activity_language_settings">Language</string>
    <string name="tv_choose_dice_language_settings">Choose the language for dice announcement:</string>
    <string name="language_english">English (by Giulia Guerra)</string>
    <string name="language_italian">Italiano (by Giulia Guerra)</string>
    <string name="language_romanian">Română (by Cristian Csetnek)</string>
    <string name="language_turkish">Türkçe (Sağlayan Erişilebilir Android Türkiye Ekibi)</string>
    <string name="title_activity_shake_settings">Shake</string>
    <string name="cbt_onshake_toggle">Use shake detector</string>
    <string name="onshake_magnitude">Set shake intensity</string>
    <string name="magnitude_very_easy">Very light</string>
    <string name="magnitude_easy">Light</string>
    <string name="magnitude_moderate">Medium</string>
    <string name="magnitude_hard">Hard</string>
    <string name="magnitude_very_hard">Very hard</string>
    <string name="title_activity_miscellaneous_settings">Miscellaneous</string>
    <string name="cbt_keep_screen_awake">Keep screen awake</string>
    <string name="title_default_settings">Reset to Defaults</string>
    <string name="body_default_settings">Hi %1$s!\nAre you sure you want to Reset all values?\nPontes GameZone will be in its initial state.</string>
    <string name="title_activity_saloon">Bar Area</string>
    <string name="saloon_title">Welcome %1$s!\nYou are now in the bar area!</string>
    <string name="mnu_saloon">Go to bar area</string>
    <string name="saloon_spent_money">You spent $%1$s today.</string>
    <string name="mnu_saloon_virtual_time">Show Virtual Time</string>
    <string name="saloon_virtual_time_title">Clock</string>
    <string name="saloon_passed_day">Virtual time is %1$s.%2$s</string>
    <string name="saloon_order">Choose what you want to buy</string>
    <string name="saloon_not_enough_money">Sorry %1$s,\nyou haven\'t enough money!</string>
    <string name="saloon_number_of_games_for_order">You played %1$s games since last order.</string>
    <string name="saloon_you_must_play_more">Hey %1$s,\nYou must play %2$s more times before another order.</string>
    <string name="saloon_actual_bonus_percentage">You have a bonus of %1$s%%\n(to be added to your winnings)</string>
    <string name="saloon_new_order_title">Order</string>
    <string name="saloon_new_order_message">Hey %1$s,\nWould you like a %2$s for $%3$s?</string>
    <string name="title_statistics_alert">Statistics</string>
    <string name="about">About</string>
    <string name="app_version">Pontes GameZone, version 2.5</string>
    <string name="app_release_date">Version 1.0 released Monday, 1st of February, 2015</string>
    <string name="app_last_update">Last update: Monday,  September 1st, 2025</string>
    <string name="app_creator">Programmed by Emanuel Boboiu (Manu)</string>
    <string name="phone_number">Phone no: +40740203043</string>
    <string name="email_address">E-mail: android@pontes.ro</string>
    <string name="web_address">Web: www.android.pontes.ro</string>
    <string name="app_credits2">Ștefan Halus created the images: cards, dice, icons</string>
    <string name="app_credits_translation">Translated into English by Emanuel Boboiu</string>
    <string name="app_credits3">Beta testers:\nAdela Cetinoiu,\nGrigore Frișan,\nCornel Todericiu,\nIoan Țichir</string>
    <string name="open_help_online">Help</string>
    <string name="action_settings">Settings</string>
    <string name="mnu_go_to">Go to…</string>
    <string name="mnu_pawnshop">Go to pawn shop</string>
    <string name="mnu_bathroom">Go to bathroom</string>
    <string name="mnu_casino_entrance">Go to the entrance hall</string>
    <string name="mnu_go_back">Go back</string>
    <string name="tv_ins_congratulations">CONGRATULATIONS!</string>
    <string name="tv_ins_main_message">Our casino went bankrupt!</string>
    <string name="tv_ins_explanations">Yes %1$s,\nYou\'ve earned more than $%2$s.\nWe can not pay more than that.\nPlease come back and start again when we recover.</string>
    <string name="tv_ins_play_sound_again">Play sound again!</string>
    <string name="tv_ins_restart_game">Restart the game now!</string>
    <string name="tv_send_performance">You can post your performance:</string>
    <string name="hint_write_a_name">Write here a name which will appear on the web…</string>
    <string name="bt_ins_send_now">Send now!</string>
</resources>