<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.pontesgamezone.PokerActivity">


    <item
        android:id="@+id/mnuSaloon"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/mnu_saloon" />

    <item
        android:id="@+id/mnuBathroom"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/mnu_bathroom" />

    <item
        android:id="@+id/mnuPawnshop"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/mnu_pawnshop" />

    <item
        android:id="@+id/mnuVirtualTime"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/mnu_saloon_virtual_time" />

    <item
        android:id="@+id/mnuPkStatistics"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_statistics_alert" />

    <item
        android:id="@+id/mnuMoneyWonAsBonus"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/mnu_money_won_as_bonus" />

    <item
        android:id="@+id/mnuPkSort"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/pk_sort_title">
        <!-- Sort submenu: -->
        <menu>
            <item
                android:id="@+id/mnuPkSortByValue"
                android:orderInCategory="110"
                android:showAsAction="never"
                android:title="@string/pk_sort_by_value" />

            <item
                android:id="@+id/mnuPkSortByColor"
                android:orderInCategory="120"
                android:showAsAction="never"
                android:title="@string/pk_sort_by_color" />

            <item
                android:id="@+id/mnuPkSortByNothing"
                android:orderInCategory="130"
                android:showAsAction="never"
                android:title="@string/pk_sort_by_nothing" />
        </menu>
    </item>


    <item
        android:id="@+id/mnuHelp"
        android:orderInCategory="1000"
        android:showAsAction="never"
        android:title="@string/open_help_online" />

</menu>
