<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInsCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ins_congratulations"
            android:textColor="#000000"
            android:textSize="@dimen/text_views_size_large"
            android:textStyle="bold" />

        <!-- A TextView for insolvency: -->
        <TextView
            android:id="@+id/tvInsMainMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ins_main_message"
            android:textColor="#000000"
            android:textSize="@dimen/text_views_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInsExplanations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tv_ins_explanations"
            android:textColor="#000000"
            android:textSize="@dimen/text_views_size"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInsPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tv_send_performance"
            android:textColor="#000000"
            android:textSize="@dimen/text_views_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/hint_write_a_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/btInsSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="postInsolvency"
            android:text="@string/bt_ins_send_now"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btPlayInsolvencyAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playInsolvency"
            android:text="@string/tv_ins_play_sound_again"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btInsGoToStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startMainActivity"
            android:text="@string/tv_ins_restart_game"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
