<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llLanguageSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/settings_paddings_layout">


    <TextView
        android:id="@+id/tvDiceLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tv_choose_dice_language_settings"
        android:textColor="#000000"
        android:textSize="@dimen/text_views_size"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbRadio_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/language_english"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbRadio_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/language_italian"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbRadio_ro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/language_romanian"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbRadio_tr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/language_turkish"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

    </RadioGroup>


</LinearLayout>
